adding a few more pointers to logstic regression theory

--- a/machineLearningLab.ipynb
+++ b/machineLearningLab.ipynb
@@ -868,8 +868,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the logistic regression is NOT a linear regression it is a classification function that allows in some cases faster convergence of a perceptron that is learning a linearly separable set. The reason the logistic regression performs better than a regular perceptron is because it deals better with outliers. It actually detects if an outlier is an outlier and minimizes the effect of it by classifying it as close as possible to the dominant group. This will seem a bit socratic in a few years to me. Since I am a practical man I am going to use a practical example:\n",
+    "The logistic regression is NOT a linear regression it is a classification function that allows in some cases faster convergence of a perceptron that is learning a linearly separable set. The reason the logistic regression performs better than a regular perceptron is because it deals better with outliers. It actually detects if an outlier is an outlier and minimizes the effect of it by classifying it as close as possible to the dominant group. \n",
     "\n",
+    "it does this by using a mathematical function called the sigmoid:\n",
+    "\n",
+    "<img src=\"https://wikimedia.org/api/rest_v1/media/math/render/svg/9537e778e229470d85a68ee0b099c08298a1a3f6\" />\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg\" />\n",
+    "\n",
+    "As the perceptron learns this function allows to measure the probability that a specific sample belongs to a specific class by associating it to the \"net product\"\n",
+    "\n",
+    "<img src=\"https://rasbt.github.io/mlxtend/user_guide/classifier/LogisticRegression_files/logistic_regression_schematic.png\" />\n",
+    "\n",
+    "This will seem a bit socratic in a few years to me. Since I am a practical man I am going to use a practical example:\n",
     "let's say we have in our sample a few visibilities and cielings a few that are not in \"range\":"
    ]
   },
