--- a/machineLearningLab.ipynb
+++ b/machineLearningLab.ipynb
@@ -1408,7 +1408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The decision regions above show a high bias problem for the \"Marginal VFR\" conditions (due to non seperability). But theu are quite acceptable for the IFR and VFR conditions.\n",
+    "The decision regions above show a high bias problem for the \"Marginal VFR\" conditions (due to non seperability). But they are quite acceptable for the IFR and VFR conditions.\n",
     "now let's try with a regular perceptron."
    ]
   },
@@ -1440,7 +1440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above is an \"Huge\" illustration of underfitting (High bias) . most of the samles are IFR yet the decsion region is biased towards VFR and will never detect the IFR samples correctly.\n",
+    "The above is an \"Huge\" illustration of High bias . most of the samples are IFR and the decsion region is biased towards IFR and will never detect the VFR samples correctly.\n",
     "\n",
     "Finally let's try with an Stochastic Gradient Descent perceptron. (a perceptron that adjusts the learning rate dynamically as it iterates throught the training set. Like a basketball descending to a hole:\n",
     "<img src=\"https://cdn-images-1.medium.com/max/1600/1*_6nUFOhjPv3ftr8CrrWANQ.png\"/>\n"
@@ -1513,7 +1513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Maybe the detailed explanation is for another day but this is a good example of overfitting"
+    "Maybe the detailed explanation is for another day but this may be a good example of overfitting. we'll learn more soon."
    ]
   },
   {
