--- a/Creating a Spiral.ipynb
+++ b/Creating a Spiral.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating a Spiral"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Without Matrix Rotation "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +57,7 @@
        "       [7, 6, 5]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +683,7 @@
        "       [22, 21, 20, 19, 18, 17, 16, 15]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +735,7 @@
        "       [7, 6, 5]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +815,7 @@
        "       [1, 8, 7]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,8 +831,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Further optimization to make use of numpy's excellent matrix manupulation library can be done. but that is for another day. \n"
+    "## With Matrix Rotation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further optimization to make use of numpy's excellent matrix manupulation library can be done. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[5 6 0 0 0]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "[[5 6 7 0 0]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "[[5 6 7 8 0]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "[[5 6 7 8 9]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[ 9 10  0  0  0]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11  0  0]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11 12  0]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11 12 13]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[13 14  0  0  1]\n",
+      " [12  0  0  0  2]\n",
+      " [11  0  0  0  3]\n",
+      " [10  0  0  0  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "[[13 14 15  0  1]\n",
+      " [12  0  0  0  2]\n",
+      " [11  0  0  0  3]\n",
+      " [10  0  0  0  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "[[13 14 15 16  1]\n",
+      " [12  0  0  0  2]\n",
+      " [11  0  0  0  3]\n",
+      " [10  0  0  0  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[ 5  6  7  8  9]\n",
+      " [ 4 19 20  0 10]\n",
+      " [ 3 18  0  0 11]\n",
+      " [ 2 17  0  0 12]\n",
+      " [ 1 16 15 14 13]]\n",
+      "[[ 5  6  7  8  9]\n",
+      " [ 4 19 20 21 10]\n",
+      " [ 3 18  0  0 11]\n",
+      " [ 2 17  0  0 12]\n",
+      " [ 1 16 15 14 13]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[ 9 10 11 12 13]\n",
+      " [ 8 21 22  0 14]\n",
+      " [ 7 20  0  0 15]\n",
+      " [ 6 19 18 17 16]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11 12 13]\n",
+      " [ 8 21 22 23 14]\n",
+      " [ 7 20  0  0 15]\n",
+      " [ 6 19 18 17 16]\n",
+      " [ 5  4  3  2  1]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[13 14 15 16  1]\n",
+      " [12 23 24 17  2]\n",
+      " [11 22  0 18  3]\n",
+      " [10 21 20 19  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "rotating matrix 90 degrees left\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15 24 25 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def produce_spiral(side_length):\n",
+    "    spiral = np.zeros([side_length, side_length], int)\n",
+    "    k = 1  # first element to fill\n",
+    "    column = 0 \n",
+    "    row = 0\n",
+    "    walls = 0  # number of walls we hit while filling to go to the inner square\n",
+    "    while k < side_length ** 2 + 1:\n",
+    "        if spiral[row][column] == 0 and side_length > column:\n",
+    "            spiral[row][column] = k\n",
+    "            if column+1 < side_length:\n",
+    "                column += 1\n",
+    "            k += 1\n",
+    "            print(spiral)\n",
+    "        else:\n",
+    "            # we hit a wall\n",
+    "            print(\"rotating matrix %d degrees left\"%90)\n",
+    "            spiral = np.rot90(spiral)\n",
+    "            walls += 1\n",
+    "            column=1+walls//4\n",
+    "            if walls % 4 == 0:\n",
+    "                # outer square filled\n",
+    "                row += 1\n",
+    "                column=row\n",
+    "\n",
+    "\n",
+    "produce_spiral(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
