--- a/Creating a Spiral.ipynb
+++ b/Creating a Spiral.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "       [7, 6, 5]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "       [22, 21, 20, 19, 18, 17, 16, 15]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -735,13 +735,13 @@
        "       [7, 6, 5]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def produce_spiral(side_length):\n",
+    "def produce_spiral2(side_length):\n",
     "    #fill out from right to left until you hit a wall\n",
     "    #wall = next index in the row or column bigger than the square root of the dimension of the array\n",
     "    #OR\n",
@@ -799,12 +799,12 @@
     "                    walls=0\n",
     "    return spiral\n",
     "\n",
-    "produce_spiral(3)"
+    "produce_spiral2(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "       [1, 8, 7]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,6 @@
       " [0 0 0 0 0]\n",
       " [0 0 0 0 0]\n",
       " [0 0 0 0 0]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[5 6 0 0 0]\n",
       " [4 0 0 0 0]\n",
       " [3 0 0 0 0]\n",
@@ -896,7 +895,6 @@
       " [3 0 0 0 0]\n",
       " [2 0 0 0 0]\n",
       " [1 0 0 0 0]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[ 9 10  0  0  0]\n",
       " [ 8  0  0  0  0]\n",
       " [ 7  0  0  0  0]\n",
@@ -917,7 +915,6 @@
       " [ 7  0  0  0  0]\n",
       " [ 6  0  0  0  0]\n",
       " [ 5  4  3  2  1]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[13 14  0  0  1]\n",
       " [12  0  0  0  2]\n",
       " [11  0  0  0  3]\n",
@@ -933,7 +930,6 @@
       " [11  0  0  0  3]\n",
       " [10  0  0  0  4]\n",
       " [ 9  8  7  6  5]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[ 1  2  3  4  5]\n",
       " [16 17  0  0  6]\n",
       " [15  0  0  0  7]\n",
@@ -949,7 +945,6 @@
       " [15  0  0  0  7]\n",
       " [14  0  0  0  8]\n",
       " [13 12 11 10  9]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[ 5  6  7  8  9]\n",
       " [ 4 19 20  0 10]\n",
       " [ 3 18  0  0 11]\n",
@@ -960,7 +955,6 @@
       " [ 3 18  0  0 11]\n",
       " [ 2 17  0  0 12]\n",
       " [ 1 16 15 14 13]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[ 9 10 11 12 13]\n",
       " [ 8 21 22  0 14]\n",
       " [ 7 20  0  0 15]\n",
@@ -971,13 +965,11 @@
       " [ 7 20  0  0 15]\n",
       " [ 6 19 18 17 16]\n",
       " [ 5  4  3  2  1]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[13 14 15 16  1]\n",
       " [12 23 24 17  2]\n",
       " [11 22  0 18  3]\n",
       " [10 21 20 19  4]\n",
       " [ 9  8  7  6  5]]\n",
-      "rotating matrix 90 degrees left\n",
       "[[ 1  2  3  4  5]\n",
       " [16 17 18 19  6]\n",
       " [15 24 25 20  7]\n",
@@ -989,7 +981,7 @@
    "source": [
     "\n",
     "\n",
-    "def produce_spiral(side_length):\n",
+    "def produce_spiral3(side_length):\n",
     "    spiral = np.zeros([side_length, side_length], int)\n",
     "    k = 1  # first element to fill\n",
     "    column = 0 \n",
@@ -1004,7 +996,7 @@
     "            print(spiral)\n",
     "        else:\n",
     "            # we hit a wall\n",
-    "            print(\"rotating matrix %d degrees left\"%90)\n",
+    "            #print(\"rotating matrix %d degrees left\"%90)\n",
     "            spiral = np.rot90(spiral)\n",
     "            walls += 1\n",
     "            column=1+walls//4\n",
@@ -1014,15 +1006,443 @@
     "                column=row\n",
     "\n",
     "\n",
-    "produce_spiral(5)\n"
+    "produce_spiral3(5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# performance comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 7]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 7]\n",
+      " [0 0 0 0 8]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 7]\n",
+      " [0 0 0 0 8]\n",
+      " [0 0 0 0 9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [ 0  0  0 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [ 0  0 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [ 0 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16  0  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14  0  0 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14  0 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15 24  0 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15 24 25 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "duration of spiral1 0.012854\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start=time.time()\n",
+    "produce_spiral(5)\n",
+    "stop=time.time()\n",
+    "print(\"duration of spiral1 %f\"%(stop-start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 7]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 7]\n",
+      " [0 0 0 0 8]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 6]\n",
+      " [0 0 0 0 7]\n",
+      " [0 0 0 0 8]\n",
+      " [0 0 0 0 9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [ 0  0  0 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [ 0  0 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [ 0 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [ 0  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [ 0  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 0  0  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16  0  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14  0  0 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14  0 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15 24  0 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15 24 25 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "duration of spiral1 0.006334\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start=time.time()\n",
+    "produce_spiral2(5)\n",
+    "stop=time.time()\n",
+    "print(\"duration of spiral1 %f\"%(stop-start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[1 2 3 4 5]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[[5 6 0 0 0]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "[[5 6 7 0 0]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "[[5 6 7 8 0]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "[[5 6 7 8 9]\n",
+      " [4 0 0 0 0]\n",
+      " [3 0 0 0 0]\n",
+      " [2 0 0 0 0]\n",
+      " [1 0 0 0 0]]\n",
+      "[[ 9 10  0  0  0]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11  0  0]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11 12  0]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11 12 13]\n",
+      " [ 8  0  0  0  0]\n",
+      " [ 7  0  0  0  0]\n",
+      " [ 6  0  0  0  0]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[13 14  0  0  1]\n",
+      " [12  0  0  0  2]\n",
+      " [11  0  0  0  3]\n",
+      " [10  0  0  0  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "[[13 14 15  0  1]\n",
+      " [12  0  0  0  2]\n",
+      " [11  0  0  0  3]\n",
+      " [10  0  0  0  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "[[13 14 15 16  1]\n",
+      " [12  0  0  0  2]\n",
+      " [11  0  0  0  3]\n",
+      " [10  0  0  0  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17  0  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18  0  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15  0  0  0  7]\n",
+      " [14  0  0  0  8]\n",
+      " [13 12 11 10  9]]\n",
+      "[[ 5  6  7  8  9]\n",
+      " [ 4 19 20  0 10]\n",
+      " [ 3 18  0  0 11]\n",
+      " [ 2 17  0  0 12]\n",
+      " [ 1 16 15 14 13]]\n",
+      "[[ 5  6  7  8  9]\n",
+      " [ 4 19 20 21 10]\n",
+      " [ 3 18  0  0 11]\n",
+      " [ 2 17  0  0 12]\n",
+      " [ 1 16 15 14 13]]\n",
+      "[[ 9 10 11 12 13]\n",
+      " [ 8 21 22  0 14]\n",
+      " [ 7 20  0  0 15]\n",
+      " [ 6 19 18 17 16]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[ 9 10 11 12 13]\n",
+      " [ 8 21 22 23 14]\n",
+      " [ 7 20  0  0 15]\n",
+      " [ 6 19 18 17 16]\n",
+      " [ 5  4  3  2  1]]\n",
+      "[[13 14 15 16  1]\n",
+      " [12 23 24 17  2]\n",
+      " [11 22  0 18  3]\n",
+      " [10 21 20 19  4]\n",
+      " [ 9  8  7  6  5]]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [16 17 18 19  6]\n",
+      " [15 24 25 20  7]\n",
+      " [14 23 22 21  8]\n",
+      " [13 12 11 10  9]]\n",
+      "duration of spiral1 0.014615\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start=time.time()\n",
+    "produce_spiral3(5)\n",
+    "stop=time.time()\n",
+    "print(\"duration of spiral1 %f\"%(stop-start))"
+   ]
   }
  ],
  "metadata": {
