--- a/MathInMinutes.ipynb
+++ b/MathInMinutes.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Math in miuntes is a book written by Paul Glendinning, a british professor of Math. I am creating this notebook to implement some of the basic concepts explained in this book."
+    "Math in miuntes is a book written by Paul Glendining, a british professor of Math. I am creating this notebook to implement some of the basic concepts explained in this book."
    ]
   },
   {
@@ -301,6 +301,156 @@
    "metadata": {},
    "source": [
     "et voilà!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## same result implemented with a stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stack(object):\n",
+    "    def __init__(self):\n",
+    "        self.items=[]\n",
+    "    def push(self,*args):\n",
+    "        for i in args:\n",
+    "            self.items.append(i)\n",
+    "    def pop(self):\n",
+    "        item=self.items[len(self.items)-1]\n",
+    "        self.items.remove(item)\n",
+    "        return item\n",
+    "    def peek(self):\n",
+    "        return self.items[self.size()-1]\n",
+    "    def size(self):\n",
+    "        return len(self.items)\n",
+    "    def isEmpty(self):\n",
+    "        return not bool(self.size())\n",
+    "    def __str__(self):\n",
+    "        return str(self.items)\n",
+    "        \n",
+    "\n",
+    "def binaryConverter(decimal=424):\n",
+    "    b=Stack()\n",
+    "    while decimal > 0:\n",
+    "        b.push(decimal%2)\n",
+    "        decimal = decimal//2\n",
+    "    list.reverse(b.items)\n",
+    "    return \"0b\"+\"\".join(map(str,b.items))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b110101000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(binaryConverter(424))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## generalized base converter from decimal "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generalConverter(decimal=424,target=2):\n",
+    "    b=Stack()\n",
+    "    while decimal > 0:\n",
+    "        b.push(decimal%target)\n",
+    "        decimal = decimal//target\n",
+    "    list.reverse(b.items)\n",
+    "    return str(target)+\"base\"+\"\".join(map(str,b.items))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2base110101000'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generalConverter(424)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3base120201'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generalConverter(424,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4base12220'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generalConverter(424,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generalConverter(424,4)"
    ]
   }
  ],
