--- a/Linear Structures.ipynb
+++ b/Linear Structures.ipynb
@@ -1174,15 +1174,215 @@
     }
    ],
    "source": [
-    "#candidates = ['0','1','2'.'3']\n",
+    "#candidates = ['0','1','2','3']\n",
     "#skip=2\n",
     "#start=0\n",
-    "#['0','1'.'3']\n",
+    "#['0','1','3']\n",
     "#['0','1']\n",
-    "#['1']\n",
+    "#['0']\n",
     "\n",
-    "#survivor should be '1'\n",
+    "#survivor should be '0'\n",
     "freeMan(0,4,True,2,True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Double Ended Queue (dequeue) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "d=deque()\n",
+    "d.append(1)\n",
+    "d.append(2)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([3, 1, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.appendleft(3)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([2, 3, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.rotate()\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 3, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.reverse()\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.appendleft(3)\n",
+    "d.count(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.clear()\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Palydrome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isPalyndrome(word: str):\n",
+    "    d=deque()\n",
+    "    rev_str=deque()\n",
+    "    for c in word:\n",
+    "        d.append(c)\n",
+    "    f=d.copy()\n",
+    "    d.reverse()\n",
+    "    if f==d:\n",
+    "        return True\n",
+    "    return False\n",
+    "isPalyndrome('toot')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isPalyndrome('palyndrome')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isPalyndrome('deed')"
    ]
   },
   {
