--- a/MathInMinutes.ipynb
+++ b/MathInMinutes.ipynb
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## generalized base converter from decimal "
+    "## Generalized base converter from decimal "
    ]
   },
   {
@@ -560,20 +560,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def perfectNumber(n):\n",
+    "# def perfectNumber(n):\n",
     "    divisors=getDivisors(n)\n",
     "    if sum(divisors)==n:\n",
     "        return True\n",
@@ -633,6 +624,135 @@
     "for i in range(10000):\n",
     "    if perfectNumber(i):\n",
     "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Euclid's Algorithm for Greatest Common Divisor Discovery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#simplified Euclid's algorithm\n",
+    "def greatestCommonDivisor(n1,n2):\n",
+    "    if n1 >= n2:\n",
+    "        greater=n1\n",
+    "        smaller=n2\n",
+    "    else:\n",
+    "        greater=n2\n",
+    "        smaller=n1\n",
+    "    if greater-smaller==0:\n",
+    "        return smaller\n",
+    "    else:\n",
+    "        return greatestCommonDivisor(smaller,greater-smaller)\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greatestCommonDivisor(585,442)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greatestCommonDivisor(12,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Stndard Euclid's algorithm\n",
+    "def greatestCommonDivisor(n1,n2):\n",
+    "    if n1 >= n2:\n",
+    "        greater=n1\n",
+    "        smaller=n2\n",
+    "    else:\n",
+    "        greater=n2\n",
+    "        smaller=n1\n",
+    "    if greater%smaller==0:\n",
+    "        return smaller\n",
+    "    else:\n",
+    "        return greatestCommonDivisor(smaller,greater%smaller)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greatestCommonDivisor(585,442)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greatestCommonDivisor(12,6)"
    ]
   },
   {
