adding tree image

--- a/Recursive Thinking.ipynb
+++ b/Recursive Thinking.ipynb
@@ -262,11 +262,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fractals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "\n",
+    "def drawBranch(posx, posy, len, angle):\n",
+    "    myTurtle = turtle.Turtle()\n",
+    "    myTurtle.hideturtle()\n",
+    "    myTurtle.penup()\n",
+    "    myTurtle.setposition(posx, posy)\n",
+    "    myTurtle.pendown()\n",
+    "    myTurtle.showturtle()\n",
+    "    myTurtle.left(angle)\n",
+    "    myTurtle.forward(len)\n",
+    "    position=myTurtle.position()\n",
+    "    myTurtle.hideturtle()\n",
+    "    del myTurtle\n",
+    "    return position\n",
+    "\n",
+    "def drawTree(n=10,posx=0,posy=-400,len=100,angle=90,trunk=False):\n",
+    "    if n==0:\n",
+    "        return\n",
+    "    elif trunk:\n",
+    "        position=drawBranch(posx, posy, len, angle)\n",
+    "        drawTree(n-1,position[0],position[1],len/2,angle)\n",
+    "    else:\n",
+    "        #leftbranch\n",
+    "        positionl=drawBranch(posx,posy,len,angle-45)\n",
+    "        drawTree(n-1,positionl[0],positionl[1],len/2,angle-45)\n",
+    "        #rightbranch\n",
+    "        positionr=drawBranch(posx,posy,len,angle+45)\n",
+    "        drawTree(n-1,positionr[0],positionr[1], len/2,angle+45)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    win=turtle.Screen()\n",
+    "    win.setup(1000,1000)\n",
+    "    win.title(\"fractal tree\")\n",
+    "    #drawBranch(0, -400, 100, 90)\n",
+    "    drawTree(n=7,posx=0,posy=0,len=200,angle=90,trunk=True)\n",
+    "    win.exitonclick()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"fractalTree.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sierpinski Triangle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "def drawTriangle(posx=-200,posy=-200,length=300,heading=0):\n",
+    "\n",
+    "    #go to intial position\n",
+    "    myTurtle = turtle.Turtle()\n",
+    "    myTurtle.hideturtle()\n",
+    "    myTurtle.penup()\n",
+    "    myTurtle.setposition(posx, posy)\n",
+    "    myTurtle.pendown()\n",
+    "    myTurtle.setheading(heading)\n",
+    "    myTurtle.showturtle()\n",
+    "    #draw the triangle\n",
+    "    myTurtle.forward(length)\n",
+    "    myTurtle.left(120)\n",
+    "    myTurtle.forward(length)\n",
+    "    myTurtle.left(120)\n",
+    "    myTurtle.forward(length)\n",
+    "    myTurtle.hideturtle()\n",
+    "    del myTurtle\n",
+    "\n",
+    "def drawSierpinski(n=10, posx=-200, posy=-200, length=300,init=False):\n",
+    "    if n == 0:\n",
+    "        return\n",
+    "\n",
+    "    myTurtle = turtle.Turtle()\n",
+    "    # initial positioning\n",
+    "    myTurtle.hideturtle()\n",
+    "    myTurtle.penup()\n",
+    "    myTurtle.setposition(posx, posy)\n",
+    "    #myTurtle.showturtle()\n",
+    "\n",
+    "    #first outer triangle\n",
+    "    if init:\n",
+    "        drawTriangle(posx, posy, length)\n",
+    "    # split the triangle into 4 by drawing an internal triangle\n",
+    "    drawTriangle(posx+length/2,posy,length/2,heading=60)\n",
+    "    #identify the edge triangles by their lower left corner and length\n",
+    "    triangle1=(posx,posy,length/2)\n",
+    "    triangle2=(posx+length/2,posy,length/2)\n",
+    "    #myTurtle.hideturtle()\n",
+    "    myTurtle.left(60)\n",
+    "    myTurtle.forward(length/2)\n",
+    "    triangle3 = (myTurtle.position()[0],myTurtle.position()[1],length/2)\n",
+    "\n",
+    "    for t in (triangle1,triangle2,triangle3):\n",
+    "        drawSierpinski(n - 1, t[0], t[1], t[2])\n",
+    "    del myTurtle\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    win = turtle.Screen()\n",
+    "    win.setup(1000, 1000)\n",
+    "    win.title(\"Sierpinski Triangle\")\n",
+    "    drawSierpinski(n=3,length=500,init=True)\n",
+    "    win.exitonclick()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"sierpinski.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hanoi To"
+   ]
   }
  ],
  "metadata": {
