Hanoi Towers Solver

--- a/Recursive Thinking.ipynb
+++ b/Recursive Thinking.ipynb
@@ -409,12 +409,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hanoi Towers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hanoi To"
+    "\n",
+    "class HanoiStack(object):\n",
+    "    def __init__(self,elementList:list,position:int=0):\n",
+    "        self.elementList = elementList\n",
+    "        if position not in {0,1,2}:\n",
+    "            raise ValueError(\"position has to be on of {0,1,2)\")\n",
+    "            self.position=None\n",
+    "        else:\n",
+    "            self.position=position\n",
+    "    def getPos(self):\n",
+    "        return self.position\n",
+    "    def __len__(self):\n",
+    "        return len(self.elementList)\n",
+    "    def __str__(self):\n",
+    "        return str(self.position)+\":\"+str(self.elementList)\n",
+    "    def append(self,e:object):\n",
+    "        self.elementList.append(e)\n",
+    "    def pop(self):\n",
+    "        return self.elementList.pop()\n",
+    "\n",
+    "def printStacks(originStack,nterStack,targetStack):\n",
+    "    t=[originStack,nterStack,targetStack]\n",
+    "    t.sort(key=lambda e: e.getPos())\n",
+    "    for s in t:\n",
+    "        print(s)\n",
+    "    print(\"----------\")\n",
+    "\n",
+    "def moveStack(originStack,nterStack,targetStack,n):\n",
+    "    if n==1:\n",
+    "        targetStack.append(originStack.pop())\n",
+    "        printStacks(originStack,nterStack,targetStack)\n",
+    "    elif n==0:\n",
+    "        return\n",
+    "    else:\n",
+    "        moveStack(originStack,targetStack,nterStack,n-1)\n",
+    "        targetStack.append(originStack.pop())\n",
+    "        printStacks(originStack,targetStack,nterStack)\n",
+    "        moveStack(nterStack,originStack,targetStack,n-1)\n",
+    "\n",
+    "\n",
+    "originStack=HanoiStack(elementList=[3,2,1,0],position=0)\n",
+    "nterStack=HanoiStack(elementList=[],position=1)\n",
+    "targetStack=HanoiStack(elementList=[],position=2)\n",
+    "printStacks(originStack,nterStack,targetStack)\n",
+    "moveStack(originStack,nterStack,targetStack,len(originStack))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
