simplifying the base rule for Hanoi towers

--- a/Recursive Thinking.ipynb
+++ b/Recursive Thinking.ipynb
@@ -417,16 +417,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:[3, 2, 1, 0]\n",
+      "1:[]\n",
+      "2:[]\n",
+      "----------\n",
+      "0:[3, 2, 1]\n",
+      "1:[0]\n",
+      "2:[]\n",
+      "----------\n",
+      "0:[3, 2]\n",
+      "1:[0]\n",
+      "2:[1]\n",
+      "----------\n",
+      "0:[3, 2]\n",
+      "1:[]\n",
+      "2:[1, 0]\n",
+      "----------\n",
+      "0:[3]\n",
+      "1:[2]\n",
+      "2:[1, 0]\n",
+      "----------\n",
+      "0:[3, 0]\n",
+      "1:[2]\n",
+      "2:[1]\n",
+      "----------\n",
+      "0:[3, 0]\n",
+      "1:[2, 1]\n",
+      "2:[]\n",
+      "----------\n",
+      "0:[3]\n",
+      "1:[2, 1, 0]\n",
+      "2:[]\n",
+      "----------\n",
+      "0:[]\n",
+      "1:[2, 1, 0]\n",
+      "2:[3]\n",
+      "----------\n",
+      "0:[]\n",
+      "1:[2, 1]\n",
+      "2:[3, 0]\n",
+      "----------\n",
+      "0:[1]\n",
+      "1:[2]\n",
+      "2:[3, 0]\n",
+      "----------\n",
+      "0:[1, 0]\n",
+      "1:[2]\n",
+      "2:[3]\n",
+      "----------\n",
+      "0:[1, 0]\n",
+      "1:[]\n",
+      "2:[3, 2]\n",
+      "----------\n",
+      "0:[1]\n",
+      "1:[0]\n",
+      "2:[3, 2]\n",
+      "----------\n",
+      "0:[]\n",
+      "1:[0]\n",
+      "2:[3, 2, 1]\n",
+      "----------\n",
+      "0:[]\n",
+      "1:[]\n",
+      "2:[3, 2, 1, 0]\n",
+      "----------\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "class HanoiStack(object):\n",
     "    def __init__(self,elementList:list,position:int=0):\n",
     "        self.elementList = elementList\n",
     "        if position not in {0,1,2}:\n",
-    "            raise ValueError(\"position has to be on of {0,1,2)\")\n",
+    "            raise ValueError(\"position has to be one of {0,1,2)\")\n",
     "            self.position=None\n",
     "        else:\n",
     "            self.position=position\n",
@@ -470,6 +541,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
